Integer(int) has been deprecated and marked for removal