@@ -10,28 +10,28 @@ public class NumberUtilsTest {
     @Test
     public void testSequence() {
 
-        Assertions.assertArrayEquals(new Integer[] {new Integer(1),new Integer(2),new Integer(3)}, NumberUtils.sequence(new Integer(1),new Integer(3)));
-        Assertions.assertArrayEquals(new Integer[] {new Integer(1),new Integer(2),new Integer(3)}, NumberUtils.sequence(new Integer(1),new Integer(3), new Integer(1)));
-        Assertions.assertArrayEquals(new Integer[] {new Integer(1),new Integer(3)}, NumberUtils.sequence(new Integer(1),new Integer(3), new Integer(2)));
-        Assertions.assertArrayEquals(new Integer[] {new Integer(3)}, NumberUtils.sequence(new Integer(3),new Integer(3), new Integer(1)));
-        Assertions.assertArrayEquals(new Integer[] {new Integer(3)}, NumberUtils.sequence(new Integer(3),new Integer(3), new Integer(2)));
-        Assertions.assertArrayEquals(new Integer[] {new Integer(3)}, NumberUtils.sequence(new Integer(3),new Integer(3)));
+        Assertions.assertArrayEquals(new Integer[] {Integer.valueOf(1),Integer.valueOf(2),Integer.valueOf(3)}, NumberUtils.sequence(Integer.valueOf(1),Integer.valueOf(3)));
+        Assertions.assertArrayEquals(new Integer[] {Integer.valueOf(1),Integer.valueOf(2),Integer.valueOf(3)}, NumberUtils.sequence(Integer.valueOf(1),Integer.valueOf(3), Integer.valueOf(1)));
+        Assertions.assertArrayEquals(new Integer[] {Integer.valueOf(1),Integer.valueOf(3)}, NumberUtils.sequence(Integer.valueOf(1),Integer.valueOf(3), Integer.valueOf(2)));
+        Assertions.assertArrayEquals(new Integer[] {Integer.valueOf(3)}, NumberUtils.sequence(Integer.valueOf(3),Integer.valueOf(3), Integer.valueOf(1)));
+        Assertions.assertArrayEquals(new Integer[] {Integer.valueOf(3)}, NumberUtils.sequence(Integer.valueOf(3),Integer.valueOf(3), Integer.valueOf(2)));
+        Assertions.assertArrayEquals(new Integer[] {Integer.valueOf(3)}, NumberUtils.sequence(Integer.valueOf(3),Integer.valueOf(3)));
 
-        Assertions.assertArrayEquals(new Integer[] {new Integer(-1),new Integer(-2),new Integer(-3)}, NumberUtils.sequence(new Integer(-1),new Integer(-3)));
-        Assertions.assertArrayEquals(new Integer[] {new Integer(-1),new Integer(-2),new Integer(-3)}, NumberUtils.sequence(new Integer(-1),new Integer(-3), new Integer(-1)));
-        Assertions.assertArrayEquals(new Integer[] {new Integer(-1),new Integer(-3)}, NumberUtils.sequence(new Integer(-1),new Integer(-3), new Integer(-2)));
-        Assertions.assertArrayEquals(new Integer[] {new Integer(-3)}, NumberUtils.sequence(new Integer(-3),new Integer(-3), new Integer(-1)));
-        Assertions.assertArrayEquals(new Integer[] {new Integer(-3)}, NumberUtils.sequence(new Integer(-3),new Integer(-3), new Integer(-2)));
-        Assertions.assertArrayEquals(new Integer[] {new Integer(-3)}, NumberUtils.sequence(new Integer(-3),new Integer(-3)));
+        Assertions.assertArrayEquals(new Integer[] {Integer.valueOf(-1),Integer.valueOf(-2),Integer.valueOf(-3)}, NumberUtils.sequence(Integer.valueOf(-1),Integer.valueOf(-3)));
+        Assertions.assertArrayEquals(new Integer[] {Integer.valueOf(-1),Integer.valueOf(-2),Integer.valueOf(-3)}, NumberUtils.sequence(Integer.valueOf(-1),Integer.valueOf(-3), Integer.valueOf(-1)));
+        Assertions.assertArrayEquals(new Integer[] {Integer.valueOf(-1),Integer.valueOf(-3)}, NumberUtils.sequence(Integer.valueOf(-1),Integer.valueOf(-3), Integer.valueOf(-2)));
+        Assertions.assertArrayEquals(new Integer[] {Integer.valueOf(-3)}, NumberUtils.sequence(Integer.valueOf(-3),Integer.valueOf(-3), Integer.valueOf(-1)));
+        Assertions.assertArrayEquals(new Integer[] {Integer.valueOf(-3)}, NumberUtils.sequence(Integer.valueOf(-3),Integer.valueOf(-3), Integer.valueOf(-2)));
+        Assertions.assertArrayEquals(new Integer[] {Integer.valueOf(-3)}, NumberUtils.sequence(Integer.valueOf(-3),Integer.valueOf(-3)));
 
-        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(new Integer(1),new Integer(3), new Integer(-1)));
-        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(new Integer(-1),new Integer(-3), new Integer(1)));
-        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(new Integer(1),new Integer(3), new Integer(-2)));
-        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(new Integer(-1),new Integer(-3), new Integer(2)));
-        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(new Integer(3),new Integer(1), new Integer(1)));
-        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(new Integer(-3),new Integer(-1), new Integer(-1)));
-        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(new Integer(3),new Integer(1), new Integer(2)));
-        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(new Integer(-3),new Integer(-1), new Integer(-2)));
+        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(Integer.valueOf(1),Integer.valueOf(3), Integer.valueOf(-1)));
+        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(Integer.valueOf(-1),Integer.valueOf(-3), Integer.valueOf(1)));
+        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(Integer.valueOf(1),Integer.valueOf(3), Integer.valueOf(-2)));
+        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(Integer.valueOf(-1),Integer.valueOf(-3), Integer.valueOf(2)));
+        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(Integer.valueOf(3),Integer.valueOf(1), Integer.valueOf(1)));
+        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(Integer.valueOf(-3),Integer.valueOf(-1), Integer.valueOf(-1)));
+        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(Integer.valueOf(3),Integer.valueOf(1), Integer.valueOf(2)));
+        Assertions.assertArrayEquals(new Integer[0], NumberUtils.sequence(Integer.valueOf(-3),Integer.valueOf(-1), Integer.valueOf(-2)));
 
     }
 
